--- a/Caddyfile
+++ b/Caddyfile
@@ -1,5 +1,5 @@
 tox.wtf {
-        root * /srv/www/tox.wtf/target
+        root * /srv/www/tox.wtf/target/site
 
         # Fallbacks
         try_files {path} {path}.html {path}/index.html
@@ -7,7 +7,7 @@ tox.wtf {
         file_server
 
         handle_errors {
-            rewrite * /{http.error.status_code}.html
+            rewrite * /e/{http.error.status_code}.html
             file_server
         }
 }
