--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,5 @@ edition = "2024"
 [dependencies]
 color-eyre = "0.6.5"
 minijinja = "2.12.0"
-fshelpers = { git = "https://github.com/toxikuu/fshelpers" }
+fshelpers = { git = "https://github.com/tox-wtf/fshelpers" }
 walkdir = "2.5.0"
