chore: update caddy config

--- a/Caddyfile
+++ b/Caddyfile
@@ -15,3 +15,12 @@ tox.wtf {
 init.tox.wtf {
     reverse_proxy :3001
 }
+
+lfs.tox.wtf {
+    root * /srv/www/tox.wtf/target/subdomains/lfs
+
+    # Fallbacks
+    try_files {path} {path}.html {path}/index.html
+
+    file_server
+}
