feat: speed up man subdomain builds with rsync

--- a/subdomains/man/Makefile
+++ b/subdomains/man/Makefile
@@ -1,6 +1,9 @@
 all: build
 
-build:
-	find man -mindepth 2 -type f -name '*.[1-8]*' -exec install -vDm644 -t ../../target/subdomains/man/ {} +
+../../target/tmp/man:
+	find man -mindepth 2 -type f -name '*.[1-8]*' -exec install -vDm644 -t ../../target/tmp/man/ {} +
 	./deref.sh
+
+build: ../../target/tmp/man
+	rsync -avu --delete ../../target/tmp/man/ ../../target/subdomains/man/
 	cp -af s ../../target/subdomains/man
