fix: ensure vat dir exists in build target

--- a/subdomains/vat/Makefile
+++ b/subdomains/vat/Makefile
@@ -1,5 +1,8 @@
 all: build
 
-build:
+../../target/tmp/vat:
+	mkdir -pv ../../target/subdomains/vat
+
+build: ../../target/tmp/vat
 	rsync -avu --delete /home/t/src/vat/p/ ../../target/subdomains/vat/
 	cp -af s ../../target/subdomains/vat
