fix: ensure subdomain target dirs exist

--- a/subdomains/man/Makefile
+++ b/subdomains/man/Makefile
@@ -4,6 +4,9 @@ all: build
 	find man -mindepth 2 -type f -name '*.[1-8]*' -exec install -vDm644 -t ../../target/tmp/man/ {} +
 	./deref.sh
 
-build: ../../target/tmp/man
+../../target/subdomains/man:
+	mkdir -pv ../../target/subdomains/man
+
+build: ../../target/tmp/man ../../target/subdomains/man
 	rsync -avu --delete ../../target/tmp/man/ ../../target/subdomains/man/
 	cp -af s ../../target/subdomains/man
